updated about me

--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Ngawang"
+title                    : "About me"
 title_separator          : "-"
-name                     : &name "About me"
+name                     : &name "Ngawang Dendup"
 description              : &description "personal description"
 url                      : https://ngawangdendup.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
