updated the navigation and ymal

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /teaching/    
     
   - title: "Résumé (PDF)"
-    url: https://www.dropbox.com/scl/fi/hgsilp6uid2vp37x70vbj/cv.pdf?rlkey=h7g7y8h3ypjsbvaqwhqxergtc&st=adkz4bd6&dl=0
+    url: /cv/cv.pdf
    
   #- title: "CV"
   #  url: /cv/
