--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /teaching/    
     
   - title: "Résumé (PDF)"
-    url: /cv/
+    url: /cv/cv/
    
   #- title: "CV"
   #  url: /cv/
