--- a/_config.yml
+++ b/_config.yml
@@ -191,6 +191,9 @@ collections:
   others:
     output: true
     permalink: /:collection/:path/
+  cv:
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
@@ -253,6 +256,14 @@ defaults:
   - scope:
       path: ""
       type: others
+    values:
+      layout: others
+      author_profile: true
+      share: true
+  # _cv
+  - scope:
+      path: ""
+      type: cv
     values:
       layout: others
       author_profile: true
