--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,8 @@ main:
     url: /teaching/    
     
   - title: "Résumé (PDF)"
-    url: /files/CV_ngawang.pdf
+    url: /files/CV.pdf
         
   - title: "Others"
     url: /others/
+d
