--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "Ngawang Dendup"
 description              : &description "personal description"
 url                      : https://ngawangdendup.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "NgawangDendup/ngawangdendup.github.io"
+#repository               : "NgawangDendup/ngawangdendup.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -191,9 +191,6 @@ collections:
   others:
     output: true
     permalink: /:collection/:path/
- # cv:
-  #  output: true
-   # permalink: /:collection/:path/
 
 
 # Defaults
