--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,10 @@
 # This config file is meant for settings that affect your entire site, values
 # which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# `jekyll serve`. If you change this file, please restart the server process.
+# `jekyll serve -l -H localhost`. If you change this file, please restart the 
+# server process.
 
-# Site Settings
+# Basic Site Settings
 locale                   : "en-US"
 title                    : "About me"
 title_separator          : "-"
@@ -13,7 +14,66 @@ name                     : &name "Ngawang Dendup"
 description              : &description "personal description"
 url                      : https://ngawangdendup.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-#repository               : "NgawangDendup/ngawangdendup.github.io"
+#repository               : "academicpages/academicpages.github.io"
+
+# Site Author - The following control what appear as part of the author content on the side bar.
+#               If a field is blank the icon and link will not appear, otherwise it will be shown.
+#               Additional customization can be done by editing /_includes/author-profile.html
+author:
+  # Biographic information
+  avatar           : "nd.jpg"
+  name             : "Ngawang Dendup"
+  pronouns         : # example: "she/her"  
+  bio              : "Consultant/Economist"
+  location         : "Tokyo"
+  employer         : "ADBI"
+  uri              : # URL
+  email            : "ndendup@adbi.org" 
+
+  # Academic websites
+  arxiv            : # URL - Update with the correct link to your profile
+  googlescholar    : "https://scholar.google.com/citations?user=7RWgye8AAAAJ&hl=en"
+  impactstory      : # URL
+  #orcid            : "http://orcid.org/yourorcidurl"
+  #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  #researchgate     : # URL
+
+  # Repositories and software development
+  bitbucket        : # Username - Update with your username on the site
+  codepen          : # Username
+  dribbble         : # Username
+  github           : #"academicpages"
+  kaggle           : # Username  
+  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+
+  # Social media
+  bluesky          : #"bsky.app" # Replace this with you Bluesky username
+  facebook         : # Username
+  flickr           : # Username
+  foursquare       : # Username
+  goodreads        : # Username
+  google_plus      : # Username
+  keybase          : # Username
+  instagram        : # Username
+  lastfm           : # Username
+  linkedin         : # Username
+  mastodon         : # URL
+  medium           : # URL
+  pinterest        : # Username
+  soundcloud       : # Username
+  steam            : # Username
+  telegram         : # URL
+  tumblr           : # Username
+  twitter          : # Username for X / Twitter
+  vine             : # Username
+  weibo            : # Username
+  wikipedia        : # Username
+  xing             : # Username
+  youtube          : # Username
+  zhihu            : # URL
+
+
+# Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -47,8 +107,9 @@ staticman:
       options:
         format           : "iso8601" # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
 atom_feed:
-  disable                : true
+  hide                   : false     # change to true to hide the RSS feed in the footer
   path                   : # blank (default) uses feed.xml
+
 
 # SEO Related
 google_site_verification :
@@ -56,14 +117,15 @@ bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
 
+
 # Social Sharing
-#twitter:
- # username               : &twitter
-#facebook:
- # username               :
-  #app_id                 :
-  #publisher              :
-#og_image                 :  # Open Graph/Twitter default site image
+twitter:
+  username               : #&twitter
+facebook:
+  username               :
+  app_id                 :
+  publisher              :
+og_image                 :  # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
@@ -74,48 +136,9 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
+  provider               :  "google-universal" # false (default), "google", "google-universal", "google-analytics-4", "custom"
   google:
     tracking_id          :
-
-
-# Site Author
-author:
-  name             : "Ngawang Dendup"
-  avatar           : "nd.jpg"
-  bio              : "Consultant/Economist"
-  location         : "Tokyo"
-  employer         : "ADBI"
-  #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "https://scholar.google.com/citations?user=7RWgye8AAAAJ&hl=en"
-  email            : "ngawangdendup@gmail.com"
-  #researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
-  uri              :
-  bitbucket        :
-  codepen          :
-  dribbble         :
-  flickr           :
-  facebook         :
-  foursquare       :
-  #github           : "ngawangdendup"
-  google_plus      :
-  keybase          :
-  instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
-  lastfm           :
-  linkedin         :
-  #orcid            : "http://orcid.org/yourorcidurl"
-  pinterest        :
-  soundcloud       :
-  #stackoverflow    : # http://stackoverflow.com/users/123456/username
-  steam            :
-  tumblr           :
-  #twitter          : "replacethistwitterhandle"
-  vine             :
-  weibo            :
-  xing             :
-  youtube          :
-  wikipedia        :
 
 
 # Reading Files
@@ -182,13 +205,10 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  research:
-    output: true
-    permalink: /:collection/:path/
   portfolio:
     output: true
     permalink: /:collection/:path/
-  others:
+  talks:
     output: true
     permalink: /:collection/:path/
 
@@ -230,15 +250,6 @@ defaults:
       layout: single
       author_profile: true
       share: true
-      comments: true 
-    # _research
-  - scope:
-      path: ""
-      type: research
-    values:
-      layout: single
-      author_profile: true
-      share: true
       comments: true
   # _portfolio
   - scope:
@@ -249,12 +260,12 @@ defaults:
       author_profile: true
       share: true
       comment: true
-  # _others
+  # _talks
   - scope:
       path: ""
-      type: others
+      type: talks
     values:
-      layout: others
+      layout: talk
       author_profile: true
       share: true
 
@@ -273,19 +284,19 @@ timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database
 
 
 # Plugins
-#plugins:
-  #- jekyll-paginate
-  #- jekyll-sitemap
-  #- jekyll-gist
-  #- jekyll-feed
-  #- jekyll-redirect-from
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jekyll-redirect-from
 # mimic GitHub Pages with --safe
-#whitelist:
-  #- jekyll-paginate
-  #- jekyll-sitemap
-  #- jekyll-gist
-  #- jekyll-feed
-  #- jemoji
+whitelist:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
 
 
 # Archives
@@ -323,7 +334,3 @@ compress_html:
   clippings: all
   ignore:
     envs: development
-    
-#Sitemap 
-gems:
-    -jekyll-sitemap
